PEL -- Pragmatic Emacs Library --  NEWS         -*- org -*-

* Changes since Version 0.4.1:
** Modifications, Fixes and Improvements:
- Add support for [[https://github.com/roman/golden-ratio.el][golden-ratio]] , activated by *pel-use-golden-ratio*.
  The *golden-ratio-mode* is bound to the ~<f11> g~ key sequence.
  This is also available via the pel-∑wnd hydra with the ~g~ key.
- Add support for [[https://github.com/deb0ch/emacs-winum][winum]] ; activated by *pel-use-winum*.
   ~M-<f11> M-w~ is globally bound to *winum-mode* and once
  active you can use the *winum-mode* key map and also the easier to use PEL
  key bindings like ~M-<f11> M-0~, up to ~M-<f11> M-9~ to move to the window by number.
  To move to a window with a larger number use the ~M-<f11> M-`~ with the prefix
  identifying the window number.
- Add support for [[https://github.com/jojojames/dired-sidebar][dired-sidebar]]; activated by *pel-use-dired-sidebar*.
   ~<f11> C-d~ is globally bound to
  *dired-sidebar-toggle-sidebar* when the *pel-use-dired-sidebar* is set to t.
  The window is also placed in *auto-revert-mode* to update when the content
  of visited directory changes.  Inside the window the binding ~<f12> C-d~ is
  also available along with the other ~<f12>~ keys for dired.
- Add *pel-emacs-source-directory* user-option to identify the Emacs repo root
  directory, allowing setting Emacs's *source-directory*.
  This user-option is under 2 groups: *pel-base-emacs* and *pel-pkg-for-help*.
  This user-option helps
  permanently setting *source-directory* and not having to set it on each new
  Emacs session when trying to access Emacs C source code via some *describe-*
  commands.
- Add the *pel-show-paren-info* command, bound to ~<f11> h ? (~.  It prints
  the value of all user-option variables that control the *paren-mode*
  behaviour inside the =*pel-highlight-info*= buffer.  The name of each
  variable is also a button that leads to its help.