@@ -10537,6 +10537,14 @@ If it set to nil, these keys are not bound."
   :type 'boolean
   :safe #'booleanp)
 
+(defcustom pel-use-transpose-frame nil
+  "Control whether PEL uses the `transpose-frame' package."
+  :group 'pel-pkg-for-windows
+  :type 'boolean
+  :safe #'booleanp
+  :link '(url-link :tag "transpose-frame @ MELPA"
+                   "https://melpa.org/#/transpose-frame"))
+
 (defcustom pel-map-meta-left-right-to-Y-Z t
   "If set <M-left> and <M-right> are mapped to M-Y and M-Z in terminal mode.
 
